# OpenSynaptic

./: .gitignore  .md_translate_cache.json  AGENTS.md  ANNOUNCEMENT_SUMMARY.md  CFFI_FINAL_FIX.md  CHANGELOG.md  CONTRIBUTING.md  Config.json  DELIVERABLES.md  DOCUMENTATION_INDEX.md  EXECUTION_SUMMARY.md  GITHUB_PAGES_GUIDE.md  ID_LEASE_IMPLEMENTATION_STATUS.md  LICENSE  LOCALIZATION_DELIVERY_REPORT.md  LOCALIZATION_VERIFICATION_CHECKLIST.md  README.md  README.zh.md  RELEASE_ANNOUNCEMENT_v0.3.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.2.md  TEST_COVERAGE.md  TEST_REPORT_v1.3.0.md  UPGRADE_GUIDE_v0.3.0.md  VERSION_COMPARISON_REPORT.md  WIKI_OPTIMIZATION_REPORT.md  _config.yml  analyze_transmissions.py  index.html  pyproject.toml  qodana.yaml  run-main.cmd  run-main.sh  setup.py  test.py  test_id_lease_system.py  test_mp4_out.txt  (+5 more)
.github/workflows/: Code_Quality_QODANA.yml  build.yml  ci.yml  pages.yml  release.yml  scripts-comprehensive-ci.yml
_layouts/: default.html
_layouts/assets/css/: style.css
data/: id_allocation.json  secure_sessions.json  test_dep1_id_allocation.json
data/benchmarks/: Config_e2e_flush1024.json  auto_profile_latest.json  cli_exhaustive_report.json  compare_1c_10000.json  compare_1c_10000_runs5.json  compare_extreme_latest.json  compare_latest.json  e2e_1m_p12_t2_b256_arch_batchffi_tail.json  e2e_1m_p12_t2_b256_arch_latest.json  e2e_1m_p12_t2_b256_baseline.json  e2e_1m_p12_t2_b256_baseline_latest.json  e2e_1m_p12_t2_b256_core_split_latest.json  e2e_1m_p12_t2_b256_flush1024.json  e2e_1m_p12_t2_b256_flush1024_latest.json  e2e_1m_p12_t2_b256_opt2_latest.json  e2e_1m_p12_t2_b256_opt3_latest.json  e2e_1m_p12_t2_b256_opt4_latest.json  e2e_1m_p12_t2_b256_opt_latest.json  e2e_1m_p12_t2_b256_run1_20260320_104313.json  e2e_1m_p12_t2_b256_run2_20260320_104313.json  e2e_1m_p12_t2_b256_run3_20260320_104313.json  e2e_1m_p4_t6_b256.json  e2e_1m_p6_t4_b256.json  e2e_200k_p12_t2_b256_adaptive_tail.json  e2e_200k_p12_t2_b256_batchwindow_latest.json  e2e_200k_p12_t2_b256_opt3_smoke.json  e2e_200k_p12_t2_b256_opt4_smoke.json  e2e_200k_p12_t2_b256_tlsbatch_metrics.json  e2e_opt_smoke.json  extreme_validation_report_latest.json  port_forwarder_matrix_sim_latest.json  stress_20m_core_batch128_16p_20260403_143528.json  stress_20m_core_batch128_16p_20260403_143644.txt  stress_core_pycore_extreme_latest.json  stress_core_rscore_extreme_latest.json  stress_e2e_inproc_pycore_latest.json  stress_e2e_loopback_tcp_latest.json  stress_e2e_loopback_udp_latest.json  test_out.json  tmp_core_bench.json  (+11 more)
data/benchmarks/phase1/: bottleneck_20260320_102802.json  p12_t2_b256_r1_20260320_102802.json  p4_t6_b256_r1_20260320_102802.json  p6_t4_b1024_20260320_102802.json  p6_t4_b128_20260320_102802.json  p6_t4_b256_20260320_102802.json  p6_t4_b256_r1_20260320_102802.json  p6_t4_b512_20260320_102802.json  phase1_summary_20260320_102802.json  target_20260320_102802.json
data/env_guard/: status.json
docs/: API.md  ARCHITECTURE.md  CONFIG_SCHEMA.md  CORE_API.md  DEDUP_EXECUTION_2026M03.md  ID_LEASE_CONFIG_REFERENCE.md  ID_LEASE_SYSTEM.md  INDEX.md  PHASE1_PERF_PLAYBOOK.md  PYCORE_INTERNALS.md  QUICK_START.md  README.md  RSCORE_API.md  TRANSPORTER_PLUGIN.md  ZERO_COPY_CLOSEOUT.md
docs/en/: API.md  Gemfile  INDEX.md  MULTI_LANGUAGE_GUIDE.md  QUICK_START.md  README.md  _config.yml  index.html
docs/en/_layouts/: default.html
docs/internal/: DELIVERABLES.md  EXECUTION_SUMMARY.md  ID_LEASE_IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  README.md  WORK_SUMMARY.md
docs/releases/: announcement-summary-v0.3.0.md  v0.2.0_announcement.md  v0.3.0_announcement.md  v0.3.0_announcement_en.md  v1.0.0-rc1.md  v1.1.0.md
docs/reports/: CHANGELOG.md  RESTART_COMMAND_DOCUMENTATION_SUMMARY.md
docs/zh/: API.md  ARCHITECTURE.md  CONFIG_SCHEMA.md  CORE_API.md  I18N.md  ID_LEASE_CONFIG_REFERENCE.md  ID_LEASE_SYSTEM.md  INDEX.md  LOCALIZATION_SUMMARY.md  MULTI_LANGUAGE_GUIDE.md  QUICK_START.md  README.md  TRANSLATION_PROGRESS_REPORT.md
libraries/: Library_Config.json  OS_Registry.py  OS_Symbols.json  Prefixes.json  __init__.py  harvester.py
libraries/Units/: Opensynaptic_Ucum_Amount_Of_Substance_library.json  Opensynaptic_Ucum_Electric_Current_library.json  Opensynaptic_Ucum_Frequency.json  Opensynaptic_Ucum_Humidity.json  Opensynaptic_Ucum_Length_library.json  Opensynaptic_Ucum_Mass_library.json
plugins/: id_allocator.py  id_allocator_optimized.py
scripts/: README_standalone_localhost_sim.md  apply_rscore_dll.py  audit_driver_capabilities.py  cli_exhaustive_check.py  concurrency_smoke.py  core_hard_switch_smoke.py  demo_i18n.py  enable_argcomplete.ps1  enable_argcomplete.sh  enhanced_port_forwarder_check.py  exhaustive_business_logic.py  exhaustive_orthogonal_test.py  exhaustive_plugin_test.py  exhaustive_security_infra_test.py  extreme_validation_pipeline.py  fix_broken_links.py  fix_wiki_links.py  flatten_wiki.py  generate_wiki_nav.py  integration_test.py  migrate_to_wiki.py  phase1_perf_playbook.py  phase2_perf_playbook.py  port_forwarder_matrix_sim_check.py  port_forwarder_roundtrip_check.py  protocol_matrix_exhaustive.py  random_registration_protocol_e2e.py  roundtrip_all_units.py  run-main.cmd  run-main.sh  services_smoke_check.py  standalone_localhost_sim.py  udp_receive_test.py  validate_libraries.py  venv-pip.cmd  venv-pip.sh  venv-python.cmd  venv-python.sh  verify_wiki_links.py  wiki_cleanup_conflicts.ps1  (+6 more)
src/: Config.json  main.py
src/opensynaptic/: main.py
src/opensynaptic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/opensynaptic/core/rscore/rust/: Cargo.toml  README.md  build.rs  pyproject.toml
src/opensynaptic/core/rscore/rust/.cargo/: config.toml
src/opensynaptic/core/rscore/rust/python/opensynaptic_rscore/: __init__.py
src/opensynaptic/core/rscore/rust/src/: lib.rs
src/opensynaptic_rscore/: __init__.py
tests/: README.md
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_core_algorithms.py  test_data_query_api.py  test_textual_tui.py
(+235 files in other folders)
