[build-system]
requires = ["maturin>=1.6,<2.0", "Cython>=3.0"]
build-backend = "maturin"

[project]
name = "opensynaptic"
version = "1.0.0rc3"
description = "2-N-2 high-performance protocol stack"
authors = [{name = "OpenSynaptic Contributors"}]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["iot", "protocol", "ucum", "telemetry", "sensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
urls = { Documentation = "https://github.com/OpenSynaptic/OpenSynaptic#readme", Issues = "https://github.com/OpenSynaptic/OpenSynaptic/issues" }
dependencies = [
    "numpy>=1.24",
    "toml>=0.10.2",
    "argcomplete>=3.0.0",
    "opensynaptic-rscore",
]

[project.optional-dependencies]
sql-mysql = ["mysql-connector-python>=9.0.0"]
sql-postgresql = ["psycopg[binary]>=3.2.0"]
transport-quic = ["aioquic>=1.2.0"]
rscore = ["maturin>=1.6.0"]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "cibuildwheel>=2.20.0",
    "maturin>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"opensynaptic.utils" = ["*.c", "bin/*.dll", "bin/*.so", "bin/*.dylib"]
"opensynaptic.utils.base62" = ["*.c"]
"opensynaptic.utils.security" = ["*.c"]
"opensynaptic.utils.c" = ["bin/*.dll", "bin/*.so", "bin/*.dylib"]
"opensynaptic.services.web_user" = ["templates/*.html", "templates/*.js"]

[project.scripts]
os-node = "opensynaptic.main:main"
os-cli = "opensynaptic.main:cli_entry"
os-tui = "opensynaptic.main:tui_main"
os-web = "opensynaptic.main:web_main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["opensynaptic"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.maturin]
manifest-path = "src/opensynaptic/core/rscore/rust/Cargo.toml"
features = ["python-module"]
sdist-include = ["LICENSE", "README.md"]
license = "Apache-2.0"


