[build-system]
requires = ["maturin>=1.6,<2.0", "Cython>=3.0"]
build-backend = "maturin"

[project]
name = "opensynaptic"
version = "1.1.0rc1"
description = "2-N-2 high-performance protocol stack"
authors = [{name = "OpenSynaptic Contributors"}]
readme = "README.md"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["iot", "protocol", "ucum", "telemetry", "sensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
urls = { Documentation = "https://github.com/OpenSynaptic/OpenSynaptic#readme", Issues = "https://github.com/OpenSynaptic/OpenSynaptic/issues" }
dependencies = [
    "numpy>=1.24",
    "toml>=0.10.2",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
sql-mysql = ["mysql-connector-python>=9.0.0"]
sql-postgresql = ["psycopg[binary]>=3.2.0"]
transport-quic = ["aioquic>=1.2.0"]
rscore = ["maturin>=1.6.0"]
tui = ["textual>=0.40.0"]
dev = [
    "twine>=5.1.1",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "maturin>=1.6.0",
    "cffi>=1.16",
]

[project.scripts]
os-node = "opensynaptic.main:main"
os-cli = "opensynaptic.main:cli_entry"
os-tui = "opensynaptic.main:tui_main"
os-web = "opensynaptic.main:web_main"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux_*"
environment = { OPENSYNAPTIC_REQUIRE_RSCORE = "1" }
before-all = "pip install maturin"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["opensynaptic"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.maturin]
bindings = "pyo3"
manifest-path = "src/opensynaptic/core/rscore/rust/Cargo.toml"
features = ["python-module"]
python-source = "src"
python-packages = ["opensynaptic", "opensynaptic_rscore"]
sdist-include = [
    "LICENSE", 
    "README.md",
    "src/opensynaptic/",
    "src/opensynaptic_rscore/",
]
license = "Apache-2.0"

