[package]
name = "opensynaptic_rscore"
version = "1.1.0-rc1"
edition = "2021"
license = "Apache-2.0"
description = "RSCore native primitives for OpenSynaptic (Base62 codec + CMD helpers)"

[package.metadata.maturin]
bindings = "pyo3"
features = ["python-module"]

[lib]
name = "opensynaptic_rscore"
crate-type = ["cdylib"]

[features]
# Keep PyO3 enabled by default so direct `maturin build --manifest-path ...`
# invocations cannot accidentally fall back to cffi autodetection.
default = ["python-module"]
python-module = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[profile.release]
opt-level = 3
strip = true
