[package]
name = "opensynaptic_rscore"
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
description = "RSCore native primitives for OpenSynaptic (Base62 codec + CMD helpers)"

[package.metadata.maturin]
bindings = "pyo3"
features = ["python-module"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
# Keep PyO3 enabled by default so direct `maturin build --manifest-path ...`
# invocations cannot accidentally fall back to cffi autodetection.
default = ["python-module"]
python-module = ["dep:pyo3"]
# Gate the persistent-worker exports behind this flag so the hot-path DLL
# remains as small as possible (worker code adds ~140 KB of icache pressure).
worker = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
bumpalo = { version = "3", features = ["collections"] }
smallvec = { version = "1", features = ["union"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
