[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "opensynaptic-rscore"
version = "0.1.0"
description = "Rust acceleration wheel for OpenSynaptic core"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "OpenSynaptic Contributors" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.maturin]
features = ["python-module"]

